--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mongodb+srv://kenneth2907:kenneth2907@cluster0.yc8ko.mongodb.net/test"
 
 GOOGLE_CLIENT_ID=575245925108-sig3sr3qdvpqvf1jnpjt0q5fcoodgbcn.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
