--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lodash": "^4.17.21",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
@@ -27,6 +28,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prisma": "^4.12.0",
